# joy-ai-rest-journaling-system

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  Dockerfile  Dockerfile.ai  README.md  analysis_worker.py  analytics_sink.py  app.py  consumer.py  docker-compose.yml  insight_worker.py  pyproject.toml  readme.md  readme_final.md  requirements.txt  search_indexer.py  transcription_worker.py
app/: db.py
app/models/: journal_models.py
app/routes/: analytics_routes.py  auth_routes.py  goal_routes.py  habit_routes.py  health_routes.py  insight_routes.py  journal_routes.py  usage_routes.py
app/services/: ai_ledger.py  analysis_service.py  analytics_service.py  goal_service.py  habit_service.py  insight_service.py  journal_service.py  search_service.py  storage_service.py  transcription_service.py  user_service.py
app/utils/: auth.py  event_consumer.py  event_publisher.py  events.py  jwt_utils.py  logging_config.py  metrics.py  rate_limiter.py  redis_rate_limiter.py  request_logging.py  retry.py  streaks.py  tools.py  tracing.py  user_cache.py  validators.py
frontend/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
gateway/: nginx.conf  proxy_params.conf
grafana/: joy-dashboard.json
k6/: load.js
k8s/: README.md
k8s/base/: api.yaml  backing.yaml  configmap.yaml  hpa.yaml  ingress.yaml  jaeger.yaml  kustomization.yaml  minio-init-job.yaml  namespace.yaml  secret.example.yaml  workers.yaml
k8s/overlays/dev/: kustomization.yaml
scripts/: bootstrap_model.py  cleanup_orphans.py  run.sh  seed_demo.py
tests/: conftest.py  fakes.py  test_ai_ledger.py  test_analysis_service.py  test_analysis_worker.py  test_analytics.py  test_attachments.py  test_auth.py  test_e2e_sentiment.py  test_event_consumer.py  test_event_integration.py  test_event_publisher.py  test_goals.py  test_habits.py  test_health.py  test_insights.py  test_journals.py  test_metrics.py  test_redis.py  test_request_logging.py  test_search.py  test_streaks.py  test_tracing.py  test_transcription.py  tests.py
