[project]
name = "joy-ai-manifestation-platform"
version = "0.6.0"
description = "Journaling backend — Flask + MongoDB + RabbitMQ event bus."
requires-python = ">=3.11"

dependencies = [
    "flask",
    "python-dotenv",
    "pymongo",
    "argon2-cffi",
    "pyjwt",
    "pika",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
# Keep the repo root importable so tests can import tests.conftest helpers
# regardless of whether pytest is invoked as `pytest` or `python -m pytest`.
pythonpath = ["."]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest",
    "mongomock",
]
ai = [
    "transformers",
    "torch",
]
